--- a/homework1.Rmd
+++ b/homework1.Rmd
@@ -64,6 +64,10 @@ Write your narrative here
 (10 points)
 
 ```{r species-name-top5, eval=TRUE}
+seattlepets %>%
+ group_by(species) %>%
+ count(animal_name, sort = TRUE) %>%
+slice_max(n, n = 5)%>%arrange(species, n)
 
 ```
 
