--- a/homework1.Rmd
+++ b/homework1.Rmd
@@ -81,5 +81,6 @@ Oliver and Lily
 `6. Is the relationship between the two variables (proportion of cats with a given name and proportion of dogs with a given name) positive or negative? What does this mean in context of the data?
 
 Answer here
+Positive   ,if dog name increase the cats names increase aslo and also if dogs names decrease the cats name decrease also in the same name of them
 
 (4 points)
